[gd_scene format=3 uid="uid://d3xksmwdntvb5"]

[ext_resource type="Script" uid="uid://c5dwsndf37m8y" path="res://Code/Player/player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://bmw86cmvqm2bn" path="res://Assets/characters/Attack1.png" id="1_xhfnw"]
[ext_resource type="Texture2D" uid="uid://de0dkrcnnpgx7" path="res://Assets/characters/Attack2.png" id="3_e80uo"]
[ext_resource type="Texture2D" uid="uid://f8dx5il5bksg" path="res://Assets/images/White_Background.png" id="3_kne1u"]
[ext_resource type="Texture2D" uid="uid://d3kjjsk4kyqa8" path="res://Assets/characters/skeletack1.png" id="4_tdg3f"]
[ext_resource type="Texture2D" uid="uid://cda8ouvytfw2i" path="res://Assets/characters/skeletack2.png" id="5_dtqjt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpjcp"]
radius = 27.45906

[sub_resource type="SpriteFrames" id="SpriteFrames_cxr5p"]
animations = [{
"frames": [{
"duration": 2.1,
"texture": ExtResource("1_xhfnw")
}, {
"duration": 1.0,
"texture": ExtResource("3_e80uo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5ncpa"]
animations = [{
"frames": [{
"duration": 2.1,
"texture": ExtResource("4_tdg3f")
}, {
"duration": 2.1,
"texture": ExtResource("5_dtqjt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhfnw"]
size = Vector2(34, 20)

[sub_resource type="Animation" id="Animation_tdg3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dtqjt"]
resource_name = "invincibility"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ncpa"]
_data = {
&"RESET": SubResource("Animation_tdg3f"),
&"invincibility": SubResource("Animation_dtqjt")
}

[node name="Player" type="CharacterBody2D" unique_id=1625906938]
script = ExtResource("1_kpjcp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1168795556]
shape = SubResource("CircleShape2D_kpjcp")

[node name="SpiderStanding" type="AnimatedSprite2D" parent="." unique_id=9786302]
sprite_frames = SubResource("SpriteFrames_cxr5p")
frame_progress = 0.91274816

[node name="SpiderJumping" type="AnimatedSprite2D" parent="." unique_id=979804088]
sprite_frames = SubResource("SpriteFrames_5ncpa")

[node name="ThePunchZone" type="Area2D" parent="." unique_id=197552567]
position = Vector2(43, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThePunchZone" unique_id=140186958]
shape = SubResource("RectangleShape2D_xhfnw")

[node name="Sprite2D" type="Sprite2D" parent="ThePunchZone" unique_id=41963774]
self_modulate = Color(0.3732504, 0.090004705, 0.14010507, 1)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_kne1u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=143440026]
libraries/ = SubResource("AnimationLibrary_5ncpa")
